# deckoala

./: .dockerignore  .env.example  .gitattributes  .gitignore  CLAUDE.md  Dockerfile  README.md  SESSION_STATE.md  compose.yml
.claude/: launch.json
backend/: Cargo.toml  rust-toolchain.toml
backend/migrations/: 0001_baseline.up.sql  0002_users.up.sql  0003_decks.up.sql  0004_revisions.up.sql  0005_assets.up.sql  0006_fonts.down.sql  0006_fonts.up.sql  0007_share_links.up.sql  0008_settings.up.sql  0009_api_tokens.up.sql  0010_research_docs.down.sql  0010_research_docs.up.sql
backend/src/: ai.rs  assets.rs  auth.rs  decks.rs  export.rs  fonts.rs  lib.rs  main.rs  mcp.rs  research.rs  settings.rs  shares.rs  tokens.rs
backend/tests/: admin.rs  assets.rs  auth.rs  decks.rs  export.rs  fonts.rs  health.rs  mcp.rs  research.rs  revisions.rs  shares.rs
backend/tests/common/: mod.rs
decisions/: ADR-0001-stack.md  ADR-0002-slide-engine.md  ADR-0003-pdf-export.md
docs/: USER-GUIDE.md
docs/briefs/: BRIEF-0000-infra-scaffolding.md  BRIEF-0001-auth-users.md  BRIEF-0002-deck-crud.md  BRIEF-0003-editor-preview.md  BRIEF-0004-slide-rail-assets.md  BRIEF-0005-present-mode.md  BRIEF-0006-pdf-export.md  BRIEF-0007-font-manager.md  BRIEF-0008-sharing.md  BRIEF-0009-i18n-darkmode.md  BRIEF-0009b-command-palette.md  BRIEF-0009c-themes-docs-images.md  BRIEF-0009d-slide-guide-images.md  BRIEF-0010-admin-settings-ai.md  BRIEF-0011-mcp-server.md  BRIEF-0012-visual-editor.md  (+2 more)
frontend/: package-lock.json  package.json  svelte.config.js  vite.config.ts  vitest.config.ts
tools/: mcp-stdio-bridge.mjs
(+71 files in other folders)
